package cmh;

public interface Breakable {
    void break_();

    void onBreakEvent();

    void damage();
}
