package cmh;

public interface DamageDealer {
    void dealDamage(Thing target);
}
