@startuml

title __LAB3_MAVEN's Class Diagram__\n

  namespace cmh.application {
    interface cmh.application.Breakable {
    }
  }
  

  namespace cmh.application {
    enum Condition {
    }
  }
  

  namespace cmh.application {
    class cmh.application.Cop {
    }
  }
  

  namespace cmh.application {
    interface cmh.application.DamageDealer {
    }
  }
  

  namespace cmh.application {
    class cmh.application.Device {
    }
  }
  

  namespace cmh.application {
    class cmh.application.Location {
    }
  }
  

  namespace cmh.application {
    class cmh.application.Main {
    }
  }
  

  namespace cmh.application {
    class cmh.application.Rocket {
    }
  }
  

  namespace cmh.application {
    class cmh.application.Squad {
    }
  }
  

  namespace cmh.application {
    abstract class cmh.application.Thing {
    }
  }
  

  namespace cmh.application {
    class cmh.application.Weapon {
    }
  }
  

  cmh.application.Cop o-- cmh.application.Location : location
  cmh.application.Cop o-- cmh.application.Weapon : meleeWeapon
  cmh.application.Cop o-- cmh.application.Weapon : rangedWeapon
  cmh.application.Device -up-|> cmh.application.Thing
  cmh.application.Rocket -up-|> cmh.application.Thing
  cmh.application.Rocket o-- cmh.application.Location : nearRocket
  cmh.application.Squad o-- cmh.application.Cop : leader
  cmh.application.Thing .up.|> cmh.application.Breakable
  cmh.application.Thing o-- cmh.application.Condition : condition
  cmh.application.Weapon .up.|> cmh.application.DamageDealer
  cmh.application.Weapon -up-|> cmh.application.Thing


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
